--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <main>
       <nav class="navbar">
-        <div class="brand-title">sunnyside</div>
+        <a href="#" class="brand-title">
+          <img src="imgs/logo.svg" alt="logo" />
+        </a>
         <a href="#" class="toggle-btn" aria-label="Toggle navigation">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -40,14 +42,15 @@
       </nav>
 
       <section class="main">
-        <h1>WE ARE CREATIVES</h1>
-        <a href="#next-section" class="arrow">
+        <h1>we are creatives</h1>
+        <a aria-label="skip to next section" href="#next-section" class="arrow">
           <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg">
             <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15" /></g>
           </svg>
         </a>
       </section>
     </main>
+
     <section id="next-section" class="grid-container">
       <div class="grid item-1">
         <h2>Transform your brand</h2>
@@ -71,19 +74,19 @@
       </div>
       <div class="grid item-5">
         <img class="cherries" src="imgs/image-graphic-design.jpg" loading="lazy" alt="Two bright red cherries on a light green background" />
-        <div class="h3">Graphic Design</div>
+        <div class="h2">Graphic Design</div>
         <p class="design">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention.</p>
       </div>
       <div class="grid item-6">
         <img class="orange" src="imgs/image-photography.jpg" loading="lazy" alt="A tangerine on a light blue background" />
-        <div class="h3">Photography</div>
+        <div class="h2">Photography</div>
         <p class="design">
           Increase your credibility by getting the most <br />
           stunning, high-quality photos that improve your business image.
         </p>
       </div>
     </section>
-    <h4>CLIENT TESTIMONIALS</h4>
+    <h3>CLIENT TESTIMONIALS</h3>
     <section class="testimonials">
       <div class="testimony one">
         <img class="test-pic" src="imgs/image-emily.jpg" loading="lazy" alt="Profile pic of a woman" />
