--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
         />
       </svg>
       <ul class="footer-links">
-        <a href="#">
-          <li class="footer-link">About</li>
-        </a>
-        <a href="#">
-          <li class="footer-link">Services</li>
-        </a>
-        <a href="#">
-          <li class="footer-link">Projects</li>
-        </a>
+        <li class="footer-link">
+          <a href="#"> About </a>
+        </li>
+        <li class="footer-link">
+          <a href="#"> Services </a>
+        </li>
+        <li class="footer-link">
+          <a href="#"> Projects </a>
+        </li>
       </ul>
       <ul class="socials">
         <li>
