removed lazy loading

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </p>
       </div>
       <div class="grid item-2">
-        <img class="egg" src="imgs/image-transform.jpg" loading="lazy" alt="An egg on a yellow background casting a shadow" />
+        <img class="egg" src="imgs/image-transform.jpg" alt="An egg on a yellow background casting a shadow" />
       </div>
       <div class="grid item-3">
-        <img class="pink-glass" src="imgs/image-stand-out.jpg" loading="lazy" alt="A pink champaigne type glass" />
+        <img class="pink-glass" src="imgs/image-stand-out.jpg" alt="A pink champaigne type glass" />
       </div>
       <div class="grid item-4">
         <h2>Stand out to the right audience</h2>
@@ -73,12 +73,12 @@
         </p>
       </div>
       <div class="grid item-5">
-        <img class="cherries" src="imgs/image-graphic-design.jpg" loading="lazy" alt="Two bright red cherries on a light green background" />
+        <img class="cherries" src="imgs/image-graphic-design.jpg" alt="Two bright red cherries on a light green background" />
         <div class="h2">Graphic Design</div>
         <p class="design">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention.</p>
       </div>
       <div class="grid item-6">
-        <img class="orange" src="imgs/image-photography.jpg" loading="lazy" alt="A tangerine on a light blue background" />
+        <img class="orange" src="imgs/image-photography.jpg" alt="A tangerine on a light blue background" />
         <div class="h2">Photography</div>
         <p class="design">
           Increase your credibility by getting the most <br />
@@ -89,7 +89,7 @@
     <h3>CLIENT TESTIMONIALS</h3>
     <section class="testimonials">
       <div class="testimony one">
-        <img class="test-pic" src="imgs/image-emily.jpg" loading="lazy" alt="Emily R" />
+        <img class="test-pic" src="imgs/image-emily.jpg" alt="Emily R" />
         <p class="description">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
         <p class="title">Emily R.</p>
         <small>Marketing Director</small>
@@ -101,7 +101,7 @@
         <small>Chief Operating Officer</small>
       </div>
       <div class="testimony three">
-        <img class="test-pic" src="imgs/image-jennie.jpg" loading="lazy" alt="Jennie F" />
+        <img class="test-pic" src="imgs/image-jennie.jpg" alt="Jennie F" />
         <p class="description">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
         <p class="title">Jennie F.</p>
         <small>Business Owner</small>
@@ -109,16 +109,16 @@
     </section>
     <section class="images-container">
       <div class="image">
-        <img src="imgs/image-gallery-milkbottles.jpg" loading="lazy" alt="Three plastic milk bottles with a tuft of cloud in the background" />
+        <img src="imgs/image-gallery-milkbottles.jpg" alt="Three plastic milk bottles with a tuft of cloud in the background" />
       </div>
       <div class="image">
-        <img src="imgs/image-gallery-orange.jpg" loading="lazy" alt="Arial view of half an orange in a blue and white bowl with an orange background" />
+        <img src="imgs/image-gallery-orange.jpg" alt="Arial view of half an orange in a blue and white bowl with an orange background" />
       </div>
       <div class="image">
-        <img src="imgs/image-gallery-cone.jpg" loading="lazy" alt="Fancy ice-cream cone with a blue background" />
+        <img src="imgs/image-gallery-cone.jpg" alt="Fancy ice-cream cone with a blue background" />
       </div>
       <div class="image">
-        <img src="imgs/image-gallery-sugarcubes.jpg" loading="lazy" alt="Stacked sugar cubes with a pink background" />
+        <img src="imgs/image-gallery-sugarcubes.jpg" alt="Stacked sugar cubes with a pink background" />
       </div>
     </section>
     <footer class="footer">
