nav role for footer ul

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main>
-      <nav class="navbar" role="navigation">
+      <nav class="navbar">
         <a href="#" class="brand-title">
           <img src="imgs/logo.svg" alt="logo" />
         </a>
@@ -130,7 +130,7 @@
           fill-rule="nonzero"
         />
       </svg>
-      <ul class="footer-links">
+      <ul class="footer-links" role="navigation">
         <li class="footer-link">
           <a href="#"> About </a>
         </li>
