Attempt at fixing accessibilty issues with navbar links

--- a/index.html
+++ b/index.html
@@ -130,17 +130,19 @@
           fill-rule="nonzero"
         />
       </svg>
-      <ul class="footer-links" role="navigation">
-        <li class="footer-link">
-          <a href="#"> About </a>
-        </li>
-        <li class="footer-link">
-          <a href="#"> Services </a>
-        </li>
-        <li class="footer-link">
-          <a href="#"> Projects </a>
-        </li>
-      </ul>
+      <nav class="footer_navbar-links">
+        <ul class="footer-links">
+          <li class="footer-link">
+            <a href="#"> About </a>
+          </li>
+          <li class="footer-link">
+            <a href="#"> Services </a>
+          </li>
+          <li class="footer-link">
+            <a href="#"> Projects </a>
+          </li>
+        </ul>
+      </nav>
       <ul class="socials">
         <li>
           <a href="#">
