more link semantic changes

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <div class="navbar-links">
           <ul>
             <li>
-              <a href="#">About</a>
+              <a href="About">About</a>
             </li>
             <li>
-              <a href="#">Services</a>
+              <a href="Services">Services</a>
             </li>
             <li>
-              <a href="#">Projects</a>
+              <a href="Projects">Projects</a>
             </li>
             <li>
-              <a id="contact-link" href="#">CONTACT</a>
+              <a id="contact-link" href="CONTACT">CONTACT</a>
             </li>
           </ul>
         </div>
