--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>Transform your brand</h2>
         <p class="branding">We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
         <p class="learn">
-          <a class="item-1_link" href="#">LEARN MORE</a>
+          <a class="item-1_link" href="learn more">LEARN MORE</a>
         </p>
       </div>
       <div class="grid item-2">
@@ -69,7 +69,7 @@
         <h2>Stand out to the right audience</h2>
         <p class="branding">Using a collabrative formula of designers, researchers, photographers, videographers, and copywriters, we'll build and extend your brand in digital places.</p>
         <p class="learn">
-          <a class="item-4_link" href="#">LEARN MORE</a>
+          <a class="item-4_link" href="learn more">LEARN MORE</a>
         </p>
       </div>
       <div class="grid item-5">
